# the

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  build.sh
demos/: CMakeLists.txt  helpersdemo.h
demos/cpp/: CMakeLists.txt  main.cpp
demos/emsc/: CMakeLists.txt  emsc_demo.c
demos/emsc/assets/shaders/: hello-frag.glsl  hello-vert.glsl  skybox-frag.glsl  skybox-vert.glsl
demos/hello/: CMakeLists.txt  hello  hello.c
demos/hello/assets/shaders/: hello-frag.glsl  hello-vert.glsl  skybox-vert.glsl
demos/matball/: CMakeLists.txt  matballs  matballs.c
demos/matball/assets/shaders/: eqr-to-cube-vert.glsl
demos/pbr/: CMakeLists.txt  gui.c  gui.h  inspector.c  main.c  matballs.c  pbr  pbr.c  pbr.h  pbr_types.h
demos/pbr/assets/env/: canyon.env  helipad.env  rooftop.env
demos/pbr/assets/shaders/: env-dfg-frag.glsl  eqr-to-cube-vert.glsl  fullscreen-img-frag.glsl  pbr-frag.glsl  pbr-vert.glsl  pbr2-frag.glsl  skybox-frag.glsl  skybox-vert.glsl
demos/test/: CMakeLists.txt  test.c
demos/test/assets/shaders/: pbr-frag.glsl
demos/test/assets/tex/env/: rooftop-dif.hdr
docs/: CODE_STYLE.md
examples/: CMakeLists.txt
examples/hello/: CMakeLists.txt  hello  hello.c  imgui.ini
examples/hello/assets/shaders/: hello-vert.glsl
examples/matball/: CMakeLists.txt  matballs  matballs.c
examples/matball/assets/shaders/: eqr-to-cube-frag.glsl  fullscreen-img-frag.glsl  fullscreen-img-vert.glsl  lut-gen-vert.glsl  prefilter-env-frag.glsl  prefilter-env-vert.glsl  skybox-frag.glsl
include/: nyas.h  nyas_core.h  nyas_draw.h
objparse/: main.c  sts_vertex_cache_optimizer.h  testobj
src/: CMakeLists.txt  defs.h  draw.c  draw.h  main.cpp  nyas.h  the.h
src/core/: chrono.c  chrono.h  common.h  config.c  config.h  definitions.h  execution.c  execution.h  hmap.c  hmap.h  io.c  io.h  log.h  manager.c  manager.h  mem.c  mem.h  nyas_core.h  nyas_defs.h  scene.c  scene.h  sched.c  sched.h  thefinitions.h  types.h  utils.c  utils.h
src/ecs/: entity.c  entity.h
src/render/: camera.c  camera.h  config.h  internalresources.c  internalresources.h  material.h  nyas_pixels.h  nyas_pixels_extra.h  nyas_pixels_internal.h  nyaspix.c  nyaspix.h  pixels.c  pixels.h  pixels_commands.c  pixels_defs.h  pixels_extra.h  pixels_gl3.c  pixels_gles2.c  pixels_internal.c  pixels_internal.h  pixels_internal_gles2.c  rendercommands.c  rendercommands.h  renderer.c  renderer.h  renderertypes.h
src/scene/: camera.c  camera.h  entity.c  entity.h
src/the/: renderer.cpp  renderer.h  scene.cpp  scene.h  the.h
src/tools/: helper-functions.c  helper-functions.h  imgui-tools.c  imgui-tools.h  imgui.c  imgui.h  lua-functions.c  lua-functions.h  lua-scripting.c  lua-scripting.h  resource-map.c  resource-map.h
src/utils/: array.c  array.h  dynamic_array.h  hmap.c  string.h
tools/: CMakeLists.txt  buildenv.sh  genenv  genenv.c  sts_vertex_cache_optimizer.h  tomesh.c
tools/assets/shaders/: env-dfg-vert.glsl  eqr-to-cube-frag.glsl  prefilter-env-frag.glsl  prefilter-env-vert.glsl
